apps/immich/deployment-ml.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app: immich-machine-learning
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      automountServiceAccountToken: false
      nodeSelector:
        nvidia.com/gpu.present: "true"
      runtimeClassName: nvidia
      enableServiceLinks: false
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:release-cuda
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          resources:
            requests:
              cpu: "150m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "4Gi"
              nvidia.com/gpu: "1"
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
          readinessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: 3003
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3

          volumeMounts:
            - name: data
              mountPath: /cache
              subPath: model-cache
            - name: tmp
              mountPath: /tmp
            - name: matplotlib-config
              mountPath: /.config/matplotlib
            - name: matplotlib-cache
              mountPath: /.cache/matplotlib
            - name: hf-home
              mountPath: /hf-home
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-ml-pvc
        - name: tmp
          emptyDir: {}
        - name: hf-home
          emptyDir: {}
        - name: matplotlib-config
          emptyDir: {}
        - name: matplotlib-cache
          emptyDir: {}
