apps/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-lan
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.wevelsiep.com`)
      kind: Rule
      services:
        - name: immich-server
          port: 80
  tls:
    options:
      name: mtls-required
      namespace: traefik
